--- a/blueprints/charger-auto-poweroff.yaml
+++ b/blueprints/charger-auto-poweroff.yaml
@@ -1,6 +1,7 @@
 blueprint:
   name: Automatic Device Charging Power Off (Tasmota)
-  description: "Monitor power usage on a HA controlled power switch and turn it off when usage drops below a designated amount."
+  description: Monitor power usage on a HA controlled power switch and turn it off
+    when usage drops below a designated amount.
   domain: automation
   input:
     power_switch:
@@ -9,55 +10,59 @@ blueprint:
       selector:
         entity:
           integration: tasmota
-          domain: switch
+          domain:
+          - switch
+          multiple: false
     power_meter:
       name: Power Usage
       description: The power switch attribute to monitor usage
       selector:
         entity:
           integration: tasmota
-          domain: sensor
-          device_class: power
+          domain:
+          - sensor
+          device_class:
+          - power
           multiple: false
     low_usage_threshold:
       name: Charging Complete Threshold
-      description: The amount in watts (W) that the charging is expected to be complete at.
+      description: The amount in watts (W) that the charging is expected to be complete
+        at.
       selector:
         number:
-          min: 0
-          max: 15
+          min: 0.0
+          max: 15.0
           unit_of_measurement: Watt
+          mode: slider
+          step: 1.0
     low_usage_hysteresis:
       name: Charging Complete Hysteresis
-      description: The time that the charging complete threshold needs to be maintained before charging is considered completed.
+      description: The time that the charging complete threshold needs to be maintained
+        before charging is considered completed.
       selector:
-        duration:
+        duration: {}
     post_charge_actions:
       name: Post Charging Actions
       description: Actions to trigger when charging is complete (notifications, etc)
       default: []
       selector:
-        action:
+        action: {}
   source_url: https://github.com/na4ma4/ha-automations/blob/main/blueprints/charger-auto-poweroff.yaml
-
 trigger:
-  - platform: numeric_state
-    entity_id: !input power_meter
-    below: !input low_usage_threshold
-    for: !input low_usage_hysteresis
-
+- platform: numeric_state
+  entity_id: !input power_meter
+  below: !input low_usage_threshold
+  for: !input low_usage_hysteresis
 variables:
-  power_switch_entity: ""
-
+  power_switch_entity: ''
 condition:
-  - condition: state
-    entity_id: !input power_switch
-    state: "on"
-
+- condition: state
+  entity_id: !input power_switch
+  state: 'on'
 action:
-  - service: switch.turn_off
-    target:
-      entity_id: !input power_switch
-  - choose:
-      - conditions: "{{ post_charge_actions is defined }}"
-        sequence: !input post_charge_actions
+- service: switch.turn_off
+  target:
+    entity_id: !input power_switch
+- choose:
+  - conditions: '{{ post_charge_actions is defined }}'
+    sequence: !input post_charge_actions
