--- a/blueprints/philips_hue-tap_switch.yaml
+++ b/blueprints/philips_hue-tap_switch.yaml
@@ -1,8 +1,7 @@
 blueprint:
   domain: automation
   name: Philips Hue Tap Switch (ZGPSWITCH)
-  description: |
-    Quick and clean setup for Hue Tap switch.
+  description: "Quick and clean setup for Hue Tap switch."
   source_url: https://github.com/na4ma4/ha-automations/blob/main/blueprints/philips_hue-tap_switch.yaml
   input:
     huetap:
@@ -11,7 +10,7 @@ blueprint:
       selector:
         device:
           filter:
-            model: "Hue tap switch (ZGPSWITCH)"
+            - model: Hue tap switch (ZGPSWITCH)
           multiple: false
     action_button_1:
       name: Button 1 Action
@@ -59,13 +58,13 @@ actions:
     data:
       name: Hue Tap Button Pressed
       message: "{{ event_id }} button {{ button_index }}"
-  - alias: "select button"
+  - alias: select button
     choose:
       - conditions:
           - condition: template
             value_template: "{{ button_index == 1 }}"
         sequence:
-          - alias: "Do something when Button 1 is pressed"
+          - alias: Do something when Button 1 is pressed
             if: "{{ not my_action_button_1 in ('none', 'null', 'unavailable', '') }}"
             then: !input action_button_1
       - conditions:
