fixed description of aeotec button entity

--- a/blueprints/zigbee2mqtt_aeotec_button.yaml
+++ b/blueprints/zigbee2mqtt_aeotec_button.yaml
@@ -6,8 +6,8 @@ blueprint:
   domain: automation
   input:
     button:
-      name: Aeotec Button Devuce
-      description: The button to use.
+      name: Aeotec Button Action Entity
+      description: The action entity on the button.
       selector:
         entity:
           integration: mqtt
