fixed aeotec button from legacy syntax

--- a/blueprints/zigbee2mqtt_aeotec_button.yaml
+++ b/blueprints/zigbee2mqtt_aeotec_button.yaml
@@ -10,9 +10,10 @@ blueprint:
       description: The action entity on the button.
       selector:
         entity:
-          integration: mqtt
-          domain:
-          - sensor
+          filter:
+          - integration: mqtt
+            domain:
+            - sensor
           multiple: false
     action_button_single:
       name: Single Press Button Action
