--- a/blueprints/dishwasher-alert.yaml
+++ b/blueprints/dishwasher-alert.yaml
@@ -5,13 +5,14 @@ blueprint:
   input:
     dishwasher:
       name: Target Dishwasher State
-      description: The dishwasher cycle state to monitor (named MODEL <part> Cycle State)
+      description: The dishwasher cycle state to monitor (named MODEL <part> Cycle
+        State)
       selector:
         entity:
           filter:
-            - integration: ge_home
-              domain:
-                - sensor
+          - integration: ge_home
+            domain:
+            - sensor
           multiple: false
     cycle_complete_actions:
       name: Cycle Complete Actions
@@ -21,19 +22,19 @@ blueprint:
         action: {}
   source_url: https://github.com/na4ma4/ha-automations/blob/main/blueprints/dishwasher-alert.yaml
 trigger:
-  - trigger: state
-    entity_id: !input dishwasher
-    from: "Rinsing"
-    to: "N/A"
-  - trigger: state
-    entity_id: !input dishwasher
-    from: "Main Wash"
-    to: "N/A"
-  - trigger: state
-    entity_id: !input dishwasher
-    from: "Drying"
-    to: "N/A"
+- trigger: state
+  entity_id: !input dishwasher
+  from: Rinsing
+  to: N/A
+- trigger: state
+  entity_id: !input dishwasher
+  from: Main Wash
+  to: N/A
+- trigger: state
+  entity_id: !input dishwasher
+  from: Drying
+  to: N/A
 action:
-  - choose:
-      - conditions: "{{ post_charge_actions is defined }}"
-        sequence: !input cycle_complete_actions
+- choose:
+  - conditions: '{{ post_charge_actions is defined }}'
+    sequence: !input cycle_complete_actions
